# django-helloworld

./: README.rst  pyproject.toml  show_tell_notes.md
showtell/: db.sqlite3  manage.py
showtell/showtell/: asgi.py  settings.py  urls.py  wsgi.py
showtell/todo/: api.py  models.py  serialisers.py
showtell/todo/migrations/: 0001_initial.py
tests/: test_show_tell.py
